--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "author": "Laura Del Rio Aviles, LauraDRA <laura.delrio.aviles@gmail.com>",
   "dependencies": {
     "@angular/animations": "^7.2.3",
     "@angular/cdk": "^7.3.0",
@@ -21,6 +22,8 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ngrx/store": "^7.2.0",
+    "@ngrx/store-devtools": "^7.2.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
